# Bron-Kerbosch

./: .gitattributes  .gitignore  CNAME  README.md  appveyor.yml  bronker_bosch1.py  bronker_bosch2.py  bronker_bosch3.py  data.py  graph.py  maximal_cliques.py  random_edges_order_100.txt  random_stats.txt  reporter.py  results_100.md  results_10k.md  results_1M.md  results_sparse.md  test_maximal_cliques.py
rust/: Cargo.toml  measure.sln
rust/bron_kerbosch/: Cargo.toml
rust/bron_kerbosch/setops/: Cargo.toml
rust/bron_kerbosch/src/: bron_kerbosch1.rs  bron_kerbosch1o.rs  bron_kerbosch1oo.rs  bron_kerbosch2.rs  bron_kerbosch2_gp.rs  bron_kerbosch2_gpx.rs  bron_kerbosch2_rp.rs  bron_kerbosch2a_gp.rs  bron_kerbosch2b.rs  bron_kerbosch2b_gp.rs  bron_kerbosch2b_gpx.rs  bron_kerbosch2b_rp.rs  bron_kerbosch2o.rs  bron_kerbosch3.rs  bron_kerbosch3_gp.rs  bron_kerbosch3_gpx.rs  bron_kerbosch3_mt.rs  bron_kerbosch3o.rs  bron_kerbosch3om.rs  bron_kerbosch4.rs  bron_kerbosch5.rs  bron_kerbosch6.rs  bron_kerbosch7.rs  bron_kerbosch8.rs  bron_kerbosch9.rs  bron_kerbosch_degeneracy.rs  bron_kerbosch_pivot.rs  clique_consumers.rs  clique_harvester.rs  core.rs  degeneracy_tests.rs  fatgraph.rs  graph.rs  graph_degeneracy.rs  graph_degeneracy_lab_tests.rs  graph_degeneracy_pbt_tests.rs  graph_degeneracy_tests.rs  graph_proptest_strategy.rs  lib.rs  main_lab_tests.rs  (+21 more)
rust/measure/: measure.vcxproj
rust/random_graph/: Cargo.toml
rust/random_graph/src/: lib.rs
rust/src/: clique_counter.rs  known_random_graph.rs  lib.rs  main.rs  random_graph.rs  utils.rs
rust/stats/: Cargo.toml
(+648 files in other folders)
