[package]
name = "compare_bron_kerbosch_on_random_graphs"
version = "1.0.0"
authors = ["Stein Somers <git@steinsomers.be>"]
edition = "2021"

[profile.release]
debug = true

[workspace]

[dependencies]
bron_kerbosch = { path="bron_kerbosch" }
stats = { path="stats" }
anyhow = "1.0.98"
clap = {version = "4.5.42", features = ["cargo"]}
csv = "1.3.1"
fnv = "1.0.7"
hashbrown = "0.15.4"
itertools = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
