[package]
name = "compare_bron_kerbosch_on_random_graphs"
version = "1.0.0"
authors = ["Stein Somers <git@steinsomers.be>"]
edition = "2021"

[profile.release]
debug = true

[workspace]

[dependencies]
bron_kerbosch = { path="bron_kerbosch" }
stats = { path="stats" }
anyhow = "1.0.100"
clap = {version = "4.5.50", features = ["cargo"]}
csv = "1.4.0"
fnv = "1.0.7"
hashbrown = "0.15.5"
itertools = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
