[package]
name = "benchmark"
version = "1.0.0"
authors = ["Stein Somers <git@steinsomers.be>"]
edition = "2024"

[profile.release]
debug = true

[workspace]

[dependencies]
bron_kerbosch = { path="bron_kerbosch" }
stats = { path="stats" }
anyhow = "1.0.102"
clap = {version = "4.6.0", features = ["cargo"]}
csv = "1.4.0"
fnv = "1.0.7"
hashbrown = "0.16.1"
itertools = "0.14.0"
strum = "0.28.0"
strum_macros = "0.28.0"
crossbeam-channel = "0.5.15"
